refactor/ cors configurationSource